--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "remixicon": "^4.7.0",
+    "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
   },
